<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/search_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/dimen_default_half"
        android:paddingBottom="@dimen/dimen_default_half"
        android:paddingRight="@dimen/dimen_default_half"
        android:paddingLeft="@dimen/dimen_default_half"
        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rv">

        <EditText
            android:id="@+id/et_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_default_quarter"
            android:layout_marginBottom="@dimen/dimen_default_quarter"
            android:paddingStart="@dimen/dimen_default"
            android:paddingEnd="@dimen/dimen_default"
            android:background="@drawable/bkg_pill_white"
            android:hint="@string/hint_owner"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <EditText
            android:id="@+id/et_repo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_default_quarter"
            android:layout_marginBottom="@dimen/dimen_default_quarter"
            android:paddingStart="@dimen/dimen_default"
            android:paddingEnd="@dimen/dimen_default"
            android:background="@drawable/bkg_pill_white"
            android:hint="@string/hint_repo"
            android:maxLines="1"
            android:inputType="text"
            android:ellipsize="end"

            app:layout_constraintTop_toTopOf="@+id/send_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/send_btn"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_default_quarter"
            android:layout_marginRight="@dimen/dimen_default_quarter"
            android:layout_marginTop="@dimen/dimen_default_quarter"

            android:src="@drawable/ic_send"
            app:elevation="0dp"

            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/et_repo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_owner"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@+id/search_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:listitem="@layout/view_stargazers_item" />

</android.support.constraint.ConstraintLayout>
